ensured text is readable on small screens

--- a/frontend/fanatii-football-x/src/Components/Homepage/Homepage.css
+++ b/frontend/fanatii-football-x/src/Components/Homepage/Homepage.css
@@ -53,15 +53,27 @@ html{
 }
 
 #intro-description {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  height: 100%;
+  width: 70%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   animation: fadeIn 1.5s;
+  text-align: left;
 }
 
 #intro-description h1{
-  font-size: xx-large;
+  font-size: 0.7rem;
+  z-index: 1;
+}
+
+#intro-description p{
+  font-size: 0.7rem;
+  width: 100%;
+  text-align: left;
+  z-index: 1;
 }
 
 .cont {
